modify ant build for java 21