@@ -24,13 +24,7 @@
 
     <target name="compile" depends="init">
         <mkdir dir="${build.private}" />
-    	<property name="build.compiler" value="javac1.21" />
-        <javac source="21" target="21" includeantruntime="false" classpathref="classpath" srcdir="${src.dir}" destdir="${build.private}" debug="true" />
-        <compilerarg value="--release" />
-        <compilerarg value="21" />
-        <compilerarg value="--add-opens" />
-        <compilerarg value="java.base/java.lang=ALL-UNNAMED" />
-        <compilerarg value="--illegal-access=warn" />
+        <javac includeantruntime="false" classpathref="classpath" srcdir="${src.dir}" destdir="${build.private}" debug="true" />
         <property name="src.agent.path" value="com/amazon/kinesis/streaming/agent" />
         <copy todir="${build.private}/${src.agent.path}" failonerror="true">
             <fileset dir="${src.dir}/${src.agent.path}" excludes="**/*.java" />
